--- a/template/includes/navbar.html
+++ b/template/includes/navbar.html
@@ -13,9 +13,30 @@
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
+
+          {% if session["logged_in"] %}
+
+          <li class="nav-item active">
+            <a class="nav-link" href="/dashboard"> Dashboard</a> 
+          </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/logout"> Logout</a> 
+            </li>
+        
+          {% else %}
+          <li class="nav-item active">
+              <a class="nav-link" href="/login"> Login</a> 
+            </li>
+          
+          {% endif %}
+
+
+
+        
+        
         <li class="nav-item active">
-            <a class="nav-link" href="/register"> Register</a> 
-        </li>
+          <a class="nav-link" href="/register"> Register</a> 
+      </li>
        
       </ul>
       <form class="form-inline mt-2 mt-md-0">
